--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,21 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/app
+    environment:
+      - DATABASE_URL=postgresql://agingos:agingos@db:5432/agingos
+    depends_on:
+      - db
+
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: agingos
+      POSTGRES_PASSWORD: agingos
+      POSTGRES_DB: agingos
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
