--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,7 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 SQLAlchemy==2.0.36
+alembic==1.13.3
 psycopg2-binary==2.9.10
+APScheduler==3.10.4
+apscheduler==3.10.4
