--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
-fastapi==0.115.0
+fastapi==0.115.6
 uvicorn[standard]==0.30.6
-SQLAlchemy==2.0.36
-alembic==1.13.3
+sqlalchemy==2.0.36
 psycopg2-binary==2.9.10
-APScheduler==3.10.4
+pydantic==2.10.3
+alembic==1.14.0
+apscheduler==3.10.4
+pyyaml==6.0.2
