--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,4 +8,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+# Default: production-like (no auto-reload). Dev profile enables --reload via docker-compose.
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
