--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Ruff format (check)
-        uses: astral-sh/ruff-action@v3
-        with:
-          args: "format --check"
+        run: make fmt-check
 
       - name: Ruff check
-        uses: astral-sh/ruff-action@v3
-        with:
-          args: "check"
+        run: make lint
 
   smoke_and_scenario:
     name: Smoke + scenario (docker compose)
