--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       DATABASE_URL: postgresql://agingos:agingos@db:5432/agingos
       AGINGOS_AUTH_MODE: ${AGINGOS_AUTH_MODE:-off}
       AGINGOS_API_KEYS: ${AGINGOS_API_KEYS:-}
+      AI_BOT_ENABLED: ${AI_BOT_ENABLED:-false}
+      AI_BOT_BASE_URL: ${AI_BOT_BASE_URL:-http://ai-bot:8010}
     depends_on:
       - db
 
@@ -24,6 +26,30 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  ai-bot:
+    build:
+      context: ./services/ai-bot
+    environment:
+      AGINGOS_API_BASE_URL: "http://backend:8000"
+      AGINGOS_API_KEY: ${AGINGOS_API_KEYS:-}
+      BOT_SCHEMA_VERSION: "v1"
+    depends_on:
+      - backend
+    restart: unless-stopped
+    ports:
+      - "8010:8010"
+
+  console:
+    image: nginx:alpine
+    depends_on:
+      - backend
+    ports:
+      - "8080:80"
+    volumes:
+      - ./services/console/index.html:/usr/share/nginx/html/index.html:ro
+      - ./services/console/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./services/console/events.html:/usr/share/nginx/html/events.html:ro
 
 volumes:
   pgdata:
