--- a/services/console/nginx.conf
+++ b/services/console/nginx.conf
@@ -10,8 +10,9 @@ server {
   }
 
   # Proxy API calls to backend to avoid browser CORS issues
-  location /api/ {
-    proxy_pass http://backend:8000/;
+  location ^~ /api/ {
+    rewrite ^/api/(.*)$ /$1 break;
+    proxy_pass http://backend:8000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
