--- a/services/console/nginx.conf
+++ b/services/console/nginx.conf
@@ -1,19 +1,38 @@
 server {
+
+    # Proxy backend API through the console origin (avoids CORS / hardcoded hosts)
+    location /api/ {
+    proxy_set_header X-API-Key $http_x_api_key;
+        proxy_pass http://backend:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+  resolver 127.0.0.11 ipv6=off valid=10s;
+  set $backend_upstream http://backend:8000;
+
   listen 80;
   server_name _;
 
   root /usr/share/nginx/html;
   index index.html;
 
-  location / {
-    try_files $uri /index.html;
-  }
-
-  # Proxy API calls to backend to avoid browser CORS issues
-  location ^~ /api/ {
-    rewrite ^/api/(.*)$ /$1 break;
-    proxy_pass http://backend:8000;
+  # /rules skal være JSON fra backend (ikke index.html)
+  location /rules {
+    proxy_pass $backend_upstream;
+    proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+
+  # SPA fallback
+  location / {
+    try_files $uri /index.html;
   }
 }
