--- a/services/console/nginx.conf
+++ b/services/console/nginx.conf
@@ -2,8 +2,9 @@ server {
 
     # Proxy backend API through the console origin (avoids CORS / hardcoded hosts)
     location /api/ {
+    rewrite ^/api/(.*)$ /$1 break;
     proxy_set_header X-API-Key $http_x_api_key;
-        proxy_pass http://backend:8000/;
+        proxy_pass http://backend:8000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -22,7 +23,7 @@ server {
 
   # /rules skal være JSON fra backend (ikke index.html)
   location /rules {
-    proxy_pass $backend_upstream;
+    proxy_pass http://backend:8000;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
