--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,5 +50,6 @@ services:
       - ./services/console/index.html:/usr/share/nginx/html/index.html:ro
       - ./services/console/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./services/console/events.html:/usr/share/nginx/html/events.html:ro
+      - ./services/console/proposals.html:/usr/share/nginx/html/proposals.html:ro
 volumes:
   pgdata:
